# SC4001

./: .gitignore  CLASSIFIER_DESIGN.md  QUICKSTART.md  README.md  main.py  pyproject.toml  results.json
classifier/: __init__.py  train.py
classifier/conf/: config.yaml
classifier/data/: __init__.py
classifier/models/: __init__.py  factory.py  model.py
classifier/utils/: constants.py  logger.py
config/: classes.json  convnextv2.yaml  default_config.yaml  resnet.yaml  vit.yaml
config/dataset/: flowers102.yaml
config/evaluation/: default.yaml
data/: __init__.py  upload_flowers102.py
distillation/outputs/: distilled_train_raw.jsonl  progress.json  tmp_partial.jsonl
distillation/scripts/: 00_check_gemini.py  01_check_dataset.py  02_debug_one_sample.py  03_distill_train.py  04_filter_clean.py  utils_flowers.py
docs/: README.md  configuration.md  dataset.md
eval/: __init__.py
eval/pipeline/: __init__.py  run.py
graphs/: loss.ipynb  loss_function.py  wsd.ipynb
scripts/: convnextv2.sh  train.sh
scripts/eval/: distributed.sh  single.sh
scripts/train/: convnextv2.sh  resnet.sh  vit.sh
sft/: __init__.py  config.py  data.py  main.py  modeling.py
sft/conf/: config.yaml
src/data/: upload_flowers102.py
temp/: triplet.ipynb
tools/: export_fsdp2_to_hf.py
train/: __init__.py  config.py  constants.py  data.py  main.py  training.py
train/classifier/: trainer.py
train/optimizer/: get_lr_scheduler.py  get_optimizer.py  muon.py
visualisation/: README.md  plot_bubble_graph.py  visualize_vit_transforms.py  visualize_vit_transforms_paper.py
(+18 files in other folders)
