[project]
name = "SC4001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "huggingface-hub>=0.36.0",
    "scipy>=1.16.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
