[project]
name = "SC4001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
